--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,12 +1,14 @@
 .section {
     width: 100vw;
     min-height: 80vh;
-    padding: 0;  
     display: flex;
     align-items: center;
     justify-content: center;
     background: transparent;
     overflow: visible;
+    /* margin-top: 80px;   
+    margin-bottom: 80px; */
+    margin: 80px 0px 80px 0px;
   }
   .inner {
     width: 80vw;
@@ -61,8 +63,8 @@
   }
  
   .desc {
-    font-size: 2rem;
-    color: #4b5563;
+    font-size: 1rem;
+    color: #c4c4c4;
     margin-bottom: 1.2rem;
     max-width: 40rem;
     font-family: 'Poppins', sans-serif;
@@ -80,6 +82,17 @@
     .right {
       width: 56%;
     }
+  }
+  .badge {
+    background: linear-gradient(135deg, var(--main-color), #00e676);
+    color: #000000;
+    border-radius: 24px;
+    padding: 0.3em 0.95em;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: .01em;
+    box-shadow: 0 2px 8px rgba(60,20,120,0.12);
+    user-select: none;
   }
   .cardsWrapper {
     position: relative;
@@ -188,7 +201,7 @@
   }
   .cardDesc {
     font-size: 1.07rem;
-    color: #4b5563;
+    color: #c4c4c4;
     margin-bottom: 0.8rem;
   }
   .dots {
